--- a/js-tutorial/test.css
+++ b/js-tutorial/test.css
@@ -26,7 +26,8 @@
     max-width: 1300px;
     margin: 0 auto;
     padding: 0 50px;
-    border:3px solid green
+    display: flex;
+    align-items:center;
 }
 
 #navbar__logo {
@@ -37,15 +38,66 @@
     -moz-background-clip: text;
     -webkit-text-fill-color: transparent;
     -moz-text-fill-color: transparent;
-    display: flex;
-    align-items: center;
     cursor: pointer;
     text-decoration: none;
     font-size: 2rem;
-    border: 3px solid red
+    display: flex;
+    align-items:center;
+    height: 40%;
 }
 
 .fa-gem {
     margin-right: 0.5rem;
-    
+}
+
+.navbar__menu {
+    display: flex;
+    align-items: center;
+    list-style: none;
+    text-align: start;
+}
+
+.navbar__item {
+    height: 80px;
+}
+
+.navbar__links {
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    padding: 0 1rem;
+    height: 100%;
+}
+
+.navbar__btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 1rem;
+}
+
+.button {
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    padding: 10px 20px;
+    outline: none;
+    border-radius: 4px;
+    background: #f77062
+}
+
+.button:hover {
+    /*background: #cd5a4e;*/
+    padding: 8px 16px;
+    margin: 4px;
+    transition: all 0.3s ease;
+}
+
+.navbar__links:hover {
+    color: rgb(182, 182, 182);
+    transition: all 0.3s ease;
 }
