--- a/js-tutorial/styles.css
+++ b/js-tutorial/styles.css
@@ -111,7 +111,6 @@
         max-width: 1300px;
         padding: 0;
         background-color:#131313;
-        border: 3px solid red;
     }
     .navbar__menu {
         display: grid;
@@ -125,7 +124,6 @@
         height: 50vh;
         z-index: -1;
         background-color:#131313;
-        border: 3px solid green;
     }
     .navbar__menu.active {
         background: #131313;
@@ -139,10 +137,43 @@
     #navbar__logo {
         padding-left: 25px;
     }
-    .navbar__toggle.bar {
+    .navbar__toggle .bar {
         width: 25px;
         height: 3px;
         margin: 5px auto;
-        transition: all 0.
+        transition: all 0.3x ease-in-out;
+        background: white;
+    }
+    .navbar__item {
+        width: 100%;
+    }
+    .navbar__links {
+        text-align: center;
+        padding: 2rem;
+        width: 100%;
+        display: table;
+    }
+
+    #mobile-menu {
+        position: absolute;
+        top: 20%;
+        right: 5%;
+        transform: translate(5%, 20%);
+    }
+    .navbar__btn {
+        padding-bottom: 2rem;
+    }
+    .button {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 80%;
+        height: 80px;
+        margin: 0;
+    }
+
+    .navbar__toggle .bar {
+        display: block;
+        cursor: pointer;
     }
 }
