made style customizations

--- a/js-tutorial/test.css
+++ b/js-tutorial/test.css
@@ -91,7 +91,6 @@
 }
 
 .button:hover {
-    /*background: #cd5a4e;*/
     padding: 8px 16px;
     margin: 4px;
     transition: all 0.3s ease;
@@ -100,4 +99,86 @@
 .navbar__links:hover {
     color: rgb(182, 182, 182);
     transition: all 0.3s ease;
+}
+
+@media screen and (max-width: 720px) {
+    .navbar__container {
+        display: flex;
+        justify-content: space-between;
+        height: 80px;
+        z-index: 1;
+        width: 100%;
+        max-width: 1300px;
+        padding: 0;
+        background-color:#131313;
+    }
+    .navbar__menu {
+        display: grid;
+        grid-template-columns: auto;
+        margin: 0;
+        width: 50%;
+        position: absolute;
+        top: -500px;
+        right: 0%;
+        opacity: 1;
+        transition: all 0.5s ease;
+        height: 50vh;
+        z-index: -1;
+        background-color:#131313;
+    }
+    .navbar__menu.active {
+        background: #131313;
+        top: 100%;
+        opacity: 1;
+        transition: all 0.5s ease;
+        z-index: 99;
+        height: 50vh;
+        font-size: 1.6rem;
+    }
+    #navbar__logo {
+        padding-left: 25px;
+    }
+    .navbar__toggle .bar {
+        width: 25px;
+        height: 3px;
+        margin: 5px auto;
+        transition: all 0.3x ease-in-out;
+        background: white;
+    }
+    .navbar__item {
+        width: 100%;
+    }
+    .navbar__links {
+        text-align: center;
+        padding: 2rem;
+        width: 100%;
+        display: table;
+    }
+
+    #mobile-menu {
+        position: absolute;
+        top: 20%;
+        right: 5%;
+        transform: translate(5%, 20%);
+    }
+    .navbar__btn {
+        padding-bottom: 2rem;
+    }
+    .button {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 80%;
+        height: 80px;
+        margin: 0;
+    }
+    .button:hover {
+        width:70%;
+        height:70px;
+        margin: 5px;
+    }
+    .navbar__toggle .bar {
+        display: block;
+        cursor: pointer;
+    }
 }
