--- a/js-tutorial/test.css
+++ b/js-tutorial/test.css
@@ -182,12 +182,39 @@
     }
 }
 /*Main Styling*/
+.main__image {
+    width: 100%;
+}
 /*Mobile Main*/
 /*Footer Styling*/
 .footer__container {
     background-color: #131313;
-    border: 3px solid red;
-    height: 200px;
+    height: 150px;
     display: flex;
-    justify-content: space-between;
+    align-items: center;
+}
+.footer__bar {
+    display: flex;
+    align-items: center;
+    list-style: none;
+    justify-content: start;
+    text-align: start;
+    width: 100%;
+    margin: 20px;
+}
+.footer__item {
+    display: grid;
+    margin: 10px;
+    padding: 10px;
+}
+.footer__header {
+    color: white;
+    font-size: 1.5rem;
+    padding: 5px;
+}
+.footer__links {
+    color: white;
+    font-size: 0.8rem;
+    padding-left: 5px;
+    text-decoration: none;
 }
