--- a/js-tutorial/test.css
+++ b/js-tutorial/test.css
@@ -198,6 +198,7 @@
     top: 50%;
     margin: 20px;
     padding: 2rem;
+    position: absolute;
 }
 .main__content h1{
     color: white;
@@ -220,6 +221,7 @@
     z-index: 2;
     top: 0%;
     right: 0%;
+    position: absolute;
 }
 .main__image {
     width: 100%;
