--- a/js-tutorial/test.css
+++ b/js-tutorial/test.css
@@ -183,22 +183,26 @@
     }
 }
 /*Main Styling*/
+.main {
+    background-color: #212121;
+    justify-content: center;
+}
 .main__container {
     background-color: #212121;
+    max-width: 1300px;
     display: flex;
     align-items: center;
     justify-self: center;
-    padding-bottom: 50px;
-    width: 100%;
+    height: 100%;
+    margin: auto;
 }
 .main__content {
-    top: 0%;
     z-index: 3;
     width:50%;
-    top: 50%;
-    margin: 20px;
+    top: 40%;
     padding: 2rem;
     position: absolute;
+    margin: 30px;
 }
 .main__content h1{
     color: white;
@@ -210,9 +214,11 @@
     -moz-background-clip: text;
     -webkit-text-fill-color: transparent;
     -moz-text-fill-color: transparent;
+    font-size: 3rem;
 }
 .main__content p{
     color: white;
+    font-size: 1.7rem;
 }
 
 .main__img__container {
@@ -222,16 +228,45 @@
     top: 0%;
     right: 0%;
     position: absolute;
+    margin: 0;
 }
 .main__image {
     width: 100%;
     border-bottom-left-radius: 25px;
 }
 /*Mobile Main*/
+@media screen and (max-width: 900px) {
+    .main__content {
+        top: 30%;
+        margin: 20px;
+        padding: 2rem;
+        
+    }
+    .main__content h1{
+        font-size: 2rem;
+    }
+    .main__content p{
+        font-size: 1.2rem;
+    }
+}
+@media screen and (max-width: 720px) {
+    .main__content {
+        top: 20%;
+        margin: 10px;
+        padding: 2rem;
+        
+    }
+    .main__content h1{
+        font-size: 1.6rem;
+    }
+    .main__content p{
+        font-size: 15px;
+    }
+}
 /*Footer Styling*/
 .footer__container {
     background-color: #131313;
-    height: 150px;
+    height: 170px;
     display: flex;
     align-items: center;
 }
@@ -242,7 +277,9 @@
     justify-content: start;
     text-align: start;
     width: 100%;
-    margin: 20px;
+    margin: auto;
+    padding: 20px;
+    max-width: 1300px;
 }
 .footer__item {
     display: grid;
